[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_lib = { git = "https://github.com/Moreliaa/aoc_lib", version = "0.1.0" }
fancy-regex = "0.12.0"
itertools = "0.12.0"
num = "0.4.1"
